Создано с помощью Colaboratory

--- a/utility.ipynb
+++ b/utility.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOeYWwrzQOssjRU8atPKq1+"
+      "authorship_tag": "ABX9TyPXCV4hCXyPDitwDfWAIY1l"
     },
     "kernelspec": {
       "name": "python3",
@@ -24,12 +24,12 @@
       "metadata": {
         "id": "BylxOfcDa_XK"
       },
-      "execution_count": 9,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 3,
       "metadata": {
         "id": "mJTIU-syap5p"
       },
@@ -67,9 +67,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EcaqUkPIbMPN",
-        "outputId": "5a30aece-794c-4779-e5fb-4c846b31e8fa"
+        "outputId": "3d1a73a1-ad35-41c7-ad06-b34b1aabe9ed"
       },
-      "execution_count": 10,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -111,7 +111,7 @@
       "metadata": {
         "id": "vKT1XumLbn19"
       },
-      "execution_count": 11,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -139,9 +139,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LIxWdjbxfXRB",
-        "outputId": "885d4769-f18f-4c79-b5ad-0dbe90ad9ad1"
+        "outputId": "389971d4-d207-4262-f5c5-b4ba5b466de1"
       },
-      "execution_count": 12,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,6 +156,51 @@
             "Total count: 3\n",
             "\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from fugue import fsql\n",
+        "\n",
+        "fsql(\"\"\"SELECT col1, col2 \n",
+        "          FROM data \n",
+        "     TRANSFORM USING make_new_col SCHEMA *,col3:int \n",
+        "         PRINT\"\"\").run(spark_session)"
+      ],
+      "metadata": {
+        "id": "vBpI92_DT5kJ",
+        "outputId": "e862b903-f0b9-439f-a1b9-aade40563c3c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "SparkDataFrame\n",
+            "col1:long|col2:long|col3:int\n",
+            "---------+---------+--------\n",
+            "1        |2        |3       \n",
+            "2        |3        |5       \n",
+            "3        |4        |7       \n",
+            "Total count: 3\n",
+            "\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "FugueWorkflowResult()"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
         }
       ]
     }
