--- a/utility.ipynb
+++ b/utility.ipynb
@@ -43,8 +43,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "+---+-----+------+\n",
             "| id|value|  food|\n",
@@ -74,6 +74,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "vKT1XumLbn19"
+      },
       "source": [
         "```python\n",
         "from typing import List, Dict, Any, Iterable\n",
@@ -94,10 +97,7 @@
         "    df = pd.DataFrame.from_records(df, columns=[\"id\", \"value\", \"food\"])\n",
         "    return df\n",
         "```"
-      ],
-      "metadata": {
-        "id": "vKT1XumLbn19"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -111,8 +111,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "SparkDataFrame\n",
             "col1:long|col2:long|col3:int\n",
@@ -156,8 +156,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "SparkDataFrame\n",
             "col1:long|col2:long|col3:int\n",
@@ -170,14 +170,14 @@
           ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "FugueWorkflowResult()"
             ]
           },
+          "execution_count": 6,
           "metadata": {},
-          "execution_count": 6
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -191,32 +191,18 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "import random\n",
-        "\n",
-        "data = pd.DataFrame({\n",
-        "    'col': [random.randrange(1, 10, 1) for i in range(20)],\n",
-        "    'col2': [random.randrange(1, 10, 1) for i in range(20)]\n",
-        "})\n",
-        "\n",
-        "dag = FugueWorkflow()\n",
-        "df = dag.df(data)\n",
-        "df = df.partition_by(\"col\", presort=\"col2 desc\", algo=\"even\").take(3)\n",
-        "dag.run(spark_session)\n",
-        "df.result.show()"
-      ],
+      "execution_count": 68,
       "metadata": {
-        "id": "oA8cDdW-rN1d",
-        "outputId": "2b39c109-a64c-492f-80bd-b886fbfe774d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "oA8cDdW-rN1d",
+        "outputId": "2b39c109-a64c-492f-80bd-b886fbfe774d"
       },
-      "execution_count": 68,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "SparkDataFrame\n",
             "col:long|col2:long\n",
@@ -233,6 +219,20 @@
             "5       |3        \n"
           ]
         }
+      ],
+      "source": [
+        "import random\n",
+        "\n",
+        "data = pd.DataFrame({\n",
+        "    'col': [random.randrange(1, 10, 1) for i in range(20)],\n",
+        "    'col2': [random.randrange(1, 10, 1) for i in range(20)]\n",
+        "})\n",
+        "\n",
+        "dag = FugueWorkflow()\n",
+        "df = dag.df(data)\n",
+        "df = df.partition_by(\"col\", presort=\"col2 desc\", algo=\"even\").take(3)\n",
+        "dag.run(spark_session)\n",
+        "df.result.show()"
       ]
     }
   ],
@@ -241,7 +241,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "env",
       "language": "python",
       "name": "python3"
     },
@@ -255,7 +255,12 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.12"
+      "version": "3.10.6"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "61ac53437f5c4e510b35ec5227d8eec2a0e1120d76484c7d93efec118f151d42"
+      }
     }
   },
   "nbformat": 4,
